--- a/src/demo/sub/components/rx/rx.component.html
+++ b/src/demo/sub/components/rx/rx.component.html
@@ -3,5 +3,5 @@
   [disabled]="service.started$ | async"
   (click)="listen()"
 >listen</button>
-<p>lang: ja</p>
+<p>lang: en</p>
 <p>grammars: none</p>
