--- a/src/demo/demo.component.html
+++ b/src/demo/demo.component.html
@@ -1,3 +1,12 @@
+<div class="ti-header">
+    <div>
+        <img class="logo" src="../assets/spartans.jpeg">
+    </div>
+    <p class="title">VOICE PI</p>
+    
+    
+</div> 
+
 <demo-main></demo-main>
 <!-- <demo-sub></demo-sub>
 <demo-rx></demo-rx> -->
