--- a/src/demo/components/main/main.component.css
+++ b/src/demo/components/main/main.component.css
@@ -56,8 +56,17 @@
 }
 
 .login-button {
-    margin: 55px 10px;
+    margin: 48px 10px;
     padding: 5px 5px;
+    padding: 8px;
+    border-radius: 4px;
+    background: #535185;
+    font-weight: 500;
+    color: #fff;
+    width: 100%;
+    border: 1px solid #2e6da4;
+    box-sizing: border-box;
+    box-shadow: 0 2px 2px rgba(153,153,153,.2);
 }
 
 .user-name {
@@ -71,4 +80,22 @@
 
 .heighttext {
     height: 20px;
+}
+
+.read-me {
+    border: 1px solid;
+    width: 550px;
+    margin: 62px 85px;
+}
+
+.para{
+    font-size: 18px;
+    color: #535185;
+    padding: 5px 20px;
+}
+
+.para-title {
+    color: #535185;
+    font-size: 32px;
+    text-align: center;
 }
